--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,8 +1,10 @@
 body {
   margin: 0;
-  color: #6a6f8c;
+  color: #95969c;
   background: #c8c8c8;
-  font: 600 16px/18px 'Open Sans', sans-serif
+  font: 600 16px/18px 'Open Sans', sans-serif;
+  background: url(https://images.unsplash.com/photo-1507208773393-40d9fc670acf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1268&q=80)  no-repeat center;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19)
 }
 
 .login-box {
@@ -20,7 +22,7 @@ body {
   height: 100%;
   position: absolute;
   padding: 90px 70px 50px 70px;
-  background: rgba(0, 77, 77, .9)
+  background: rgba(235, 236, 236, 0.918)
 }
 
 .login-snip .login,
@@ -58,7 +60,7 @@ body {
 
 .login-snip .sign-in:checked+.tab,
 .login-snip .sign-up:checked+.tab {
-  color: #fff;
+  color: #0000aa;
   border-color: #1161ee
 }
 
@@ -85,8 +87,8 @@ body {
 .login-space .group .button {
   border: none;
   padding: 15px 20px;
-  border-radius: 25px;
-  background: rgba(255, 255, 255, .1)
+  border-radius: 15px;
+  background: rgba(54, 48, 48, 0.1)
 }
 
 .login-space .group input[data-type="password"] {
@@ -95,12 +97,12 @@ body {
 }
 
 .login-space .group .label {
-  color: #aaa;
+  color: #0000aa;
   font-size: 12px
 }
 
 .login-space .group .button {
-  background: #1161ee
+  background: #0e54cc
 }
 
 .login-space .group label .icon {
@@ -109,7 +111,7 @@ body {
   border-radius: 2px;
   position: relative;
   display: inline-block;
-  background: rgba(255, 255, 255, .1)
+  background: #0e54cc;
 }
 
 .login-space .group label .icon:before,
@@ -136,7 +138,7 @@ body {
 }
 
 .login-space .group .check:checked+label {
-  color: #fff
+  color: #000
 }
 
 .login-space .group .check:checked+label .icon {
@@ -184,7 +186,7 @@ a {
 .hr {
   height: 2px;
   margin: 60px 0 50px 0;
-  background: rgba(255, 255, 255, .2)
+  background: #0000aa
 }
 
 .foot {
@@ -197,5 +199,5 @@ a {
 }
 
 ::placeholder {
-  color: #b3b3b3
+  color: #383838
 }
