--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -103,7 +103,19 @@ body {
   border: none;
   padding: 15px 20px;
   border-radius: 15px;
-  background: rgba(54, 48, 48, 0.1)
+  background: rgba(54, 48, 48, 0.1);
+}
+
+
+.eye {
+  display: flex;
+  margin-right: -30px;
+  padding-right: 35px;
+  
+
+  /* position: absolute;
+  top: 130px;
+  left: 330px; */
 }
 
 .login-space .group input[data-type="password"] {
