--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -235,3 +235,10 @@ a {
 .text-uppercase {
   color: #0000aa;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-image: url(https://images.unsplash.com/photo-1593642702909-dec73df255d7?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
+  }
+  
+}
